--- a/app/html/story-ngx-ol.component-OLD-COMPLETE.html
+++ b/app/html/story-ngx-ol.component-OLD-COMPLETE.html
@@ -1,4 +1,4 @@
-<aol-map [width]="'100%'" [height]="'100%'">
+<aol-map [width]="'100%'" [height]="'100%'" [logo]="'true'">
   <aol-view [zoom]="zoom">
     <aol-coordinate [x]="5" [y]="45" [srid]="'EPSG:4326'"></aol-coordinate>
   </aol-view>
